--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
     .packing-list ul{list-style:none;padding:0;}
     .packing-list li{margin:1rem 0;font-size:1.3rem;}
     .packing-list input[type="checkbox"]{transform:scale(1.8);margin-right:15px;vertical-align:middle;}
+
+    /* Mobile-specific adjustments */
+    @media (max-width: 768px) {
+        .header { padding: 1.5rem 0.5rem; font-size: 1.2rem; }
+        .header h1 { font-size: 1.8rem; }
+        .header p { font-size: 1.2rem; }
+        .tabs { margin: 1rem auto; flex-direction: column; align-items: center; border-bottom: none; }
+        .tab-btn { padding: 1rem 1.5rem; font-size: 1.2rem; width: 90%; text-align: center; margin: 0.3rem 0; border-radius: 15px; }
+        .content { padding: 0 1rem; margin: 1rem auto; }
+        .day { padding: 1.5rem; border-radius: 15px; margin-bottom: 1.5rem; border-left: 5px solid #FFD700; }
+        .day h2 { font-size: 1.5rem; }
+        .big-btn { padding: 1rem; font-size: 1.3rem; }
+        .detail-day { padding: 1.5rem; border-radius: 15px; margin: 1rem auto; }
+        .hero-img { max-height: 250px; margin: 1rem 0; }
+        .weather-box { padding: 1rem; font-size: 0.9rem; }
+        .step { margin: 1rem 0; padding: 1rem; line-height: 1.6; font-size: 0.95rem; }
+        .time { font-size: 1rem; }
+        .links a { padding: 0.7rem 1rem; font-size: 0.95rem; display: block; margin: 0.5rem 0; }
+        .packing-list li { font-size: 1.1rem; }
+        .packing-list input[type="checkbox"] { transform: scale(1.5); margin-right: 10px; }
+        #out { font-size: 2rem; }
+    }
 </style>
 </head>
 <body>
